--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -11,10 +11,10 @@
     display: flex;
     align-items: center;
     justify-content: left;
-    background-color: #303030;
+    background-color: rgb(45,45,45);
     /* background: linear-gradient(90deg, #ff86ff 0, #ff79ff 16.67%, #ce68ff 33.33%, #8953f2 50%, #433dc4 66.67%, #002b9b 83.33%, #001b76 100%); */
-    color: #333;
-    height: 12vh;
+    color: rgb(45,45,45);;
+    height: 16vh;
     position: fixed;
     top: 0;
     left: 0;
