--- a/src/components/create/create.module.css
+++ b/src/components/create/create.module.css
@@ -61,8 +61,9 @@
 }
 .formsContainer{
     padding: 1rem;
-    height: 60vh;
+    height: 70vh;
     width: 60vw;
+    margin-bottom: 20px;
     background-color: #515151;
     border-radius: 10px;
     display: flex;
