--- a/src/components/create2/create2.module.css
+++ b/src/components/create2/create2.module.css
@@ -53,7 +53,7 @@
     padding: 0.6rem;
     border: 2px solid transparent;    width: 15rem;
     height: 4rem;
-    margin: 2rem;
+    margin: 2rem; 
     border-radius: 50px;
     color: white;
     font-weight: 700;
@@ -61,8 +61,9 @@
 }
 .formsContainer{
     padding: 1rem;
-    height: 60vh;
+    height: 70vh;
     width: 60vw;
+    margin: 30px ;
     background-color: #515151;
     border-radius: 10px;
     display: flex;
